# Task 2/docs/swagger.json
@@ -13,9 +13,9 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/employees": {
+        "/api/v1/employees": {
             "get": {
-                "description": "Retrieves a list of all employees",
+                "description": "Get a list of all employees",
                 "produces": [
                     "application/json"
                 ],
@@ -29,14 +29,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Employee"
+                                "$ref": "#/definitions/structure.ShowEmployee"
                             }
                         }
                     }
                 }
             },
             "post": {
-                "description": "Creates a new employee record",
+                "description": "Create a new employee with the provided details",
                 "consumes": [
                     "application/json"
                 ],
@@ -46,31 +46,43 @@
                 "tags": [
                     "Employees"
                 ],
-                "summary": "Create an employee",
+                "summary": "Create a new employee",
                 "parameters": [
                     {
-                        "description": "Employee object",
+                        "description": "Employee details",
                         "name": "employee",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Employee"
+                            "$ref": "#/definitions/structure.Employee"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Employee"
+                            "$ref": "#/definitions/structure.ShowEmployee"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/employees/{id}": {
+        "/api/v1/employees/{id}": {
             "get": {
-                "description": "Retrieves a specific employee by ID",
+                "description": "Get an employee with the provided ID",
                 "produces": [
                     "application/json"
                 ],
@@ -91,19 +103,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Employee"
+                            "$ref": "#/definitions/structure.ShowEmployee"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/views.ErrorResponse"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Updates a specific employee by ID",
+                "description": "Update an existing employee with the provided ID and details",
                 "consumes": [
                     "application/json"
                 ],
@@ -113,7 +131,7 @@
                 "tags": [
                     "Employees"
                 ],
-                "summary": "Update an employee by ID",
+                "summary": "Update an existing employee",
                 "parameters": [
                     {
                         "type": "integer",
@@ -123,12 +141,12 @@
                         "required": true
                     },
                     {
-                        "description": "Employee object",
+                        "description": "Updated employee details",
                         "name": "employee",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Employee"
+                            "$ref": "#/definitions/structure.Employee"
                         }
                     }
                 ],
@@ -136,25 +154,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Employee"
+                            "$ref": "#/definitions/structure.ShowEmployee"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/views.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/views.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrorResponse"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Deletes a specific employee by ID",
+                "description": "Delete an employee with the provided ID",
                 "tags": [
                     "Employees"
                 ],
@@ -169,22 +193,22 @@
                     }
                 ],
                 "responses": {
-                    "202": {
-                        "description": "Accepted",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.SuccessResponse"
+                            "$ref": "#/definitions/views.SuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/views.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/views.ErrorResponse"
                         }
                     }
                 }
@@ -192,7 +216,7 @@
         }
     },
     "definitions": {
-        "main.Employee": {
+        "structure.Employee": {
             "type": "object",
             "properties": {
                 "date_of_birth": {
@@ -224,7 +248,36 @@
                 }
             }
         },
-        "main.ErrorResponse": {
+        "structure.ShowEmployee": {
+            "type": "object",
+            "properties": {
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "department": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_admin": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                }
+            }
+        },
+        "views.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -232,7 +285,7 @@
                 }
             }
         },
-        "main.SuccessResponse": {
+        "views.SuccessResponse": {
             "type": "object",
             "properties": {
                 "message": {
